Add pipelines#activate endpoint
