# app/controllers/api/v1/pipelines_controller.rb
@@ -7,6 +7,11 @@ module Api
         result = Pipelines::Endpoints::CreateEndpoint.call(request)
         handle_result(result, :created)
       end
+
+      def activate
+        result = Pipelines::Endpoints::ActivateEndpoint.call(request)
+        handle_result(result)
+      end
     end
   end
 end
