# config/routes.rb
@@ -8,7 +8,11 @@ Rails.application.routes.draw do
     namespace :v1 do
       resources :merchants, only: :index
       resources :partners, only: %i[index show]
-      resources :pipelines, only: %i[create]
+      resources :pipelines, only: %i[create] do
+        member do
+          post :activate
+        end
+      end
     end
   end
 end
